Test: Troquei get(0) por getFirst().